# MT2-companion

./: .gitignore  AGENT.md  CHANGELOG.md  COMPLETION_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/commands/: cards.rs  export.rs  mod.rs  ocr.rs  scoring.rs  window.rs
src-tauri/src/database/: migrations.rs  mod.rs  repository.rs  repository.rs.bak  schema.rs
src-tauri/src/ocr/: capture.rs  mock.rs  mod.rs  preprocess.rs  recognize.rs
src-tauri/src/scoring/: calculator.rs  context.rs  mod.rs  synergies.rs
src/components/card-display/: CardList.tsx
src/components/deck-tracker/: DeckTracker.tsx
src/components/draft-overlay/: DraftOverlay.tsx
src/lib/: api.ts
src/lib/__tests__/: api.test.ts
src/stores/: cardStore.ts  deckStore.ts  index.ts  overlayStore.ts  settingsStore.ts
src/stores/__tests__/: cardStore.test.ts  deckStore.test.ts
src/types/: index.ts
tests/: e2e.spec.ts
